Made fixes to getTopHP() and getTopAttack()